--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
  <title>My Portfolio</title>
 </head>
 <body>
- <h1>Hello! My name is Tianchi Ma</h1>
+<div>
+  <img src="https://via.placeholder.com/150" />
+  <h1>Hello! My name is Tianchi Ma</h1>
+  <h3>I'm a currently master student at McGill University</h3>
+</div>
 </body>
 </html>
