--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div>
   <img src="https://via.placeholder.com/150" />
   <h1>Hello! My name is Tianchi Ma</h1>
-  <h3>I'm a currently master student at McGill University</h3>
+  <h3>I'm a currently master student at School of Computer Science, McGill University.</h3>
 </div>
 </body>
 </html>
