--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
 <body>
 <div>
   <img src="https://via.placeholder.com/150" />
-  <h1>Hello! My name is Tianchi Ma</h1>
+  <h1>Welcome! Here is Tianchi Ma's page.</h1>
   <h3>I'm a currently master student at School of Computer Science, McGill University.</h3>
+  <div>
+  <div>
+    <p>Some of my skills include:</p>
+    <ul>
+      <li>Languages:</li>
+      <li>Programming:</li>
+      <li>Machine Learning:</li>
+      <li>Others:</li>
+    </ul>
+  </div>
+</div>
 </div>
 </body>
 </html>
