--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <div>
   <img src="https://via.placeholder.com/150" />
-  <h1>Welcome! Here is Tianchi Ma's page.</h1>
+  <h1>Welcome! My name is Tianchi Ma(天驰 马).</h1>
   <h3>I'm a currently master student at School of Computer Science, McGill University.</h3>
   <div>
     <p>Some of my skills include:</p>
