--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 <body>
 <div>
   <img src="https://via.placeholder.com/150" />
-  <h1>Welcome! My name is Tianchi Ma(天驰 马).</h1>
+  <h1>Welcome! My name is Tianchi Ma(马天驰).</h1>
   <h3>I'm a currently master student at School of Computer Science, McGill University.</h3>
   <div>
     <p>Some of my skills include:</p>
     <ul>
-      <li>Languages:</li>
-      <li>Programming:</li>
-      <li>Machine Learning:</li>
-      <li>Others:</li>
+      <li>Languages: Chinese(native), English(advanced), French(intermediate)</li>
+      <li>Programming: Python, Java, MATLAB</li>
+      <li>Computer fundamentals: data structures and algorithms, OOP</li>
+      <li>Machine Learning: classic models, deep learning models(MLP, CNN), Python libraries(Scikit-Learn, Numpy, PyTorch)</li>
+      <li>Optimisation: discrete optimisation techniques(simplex, duality, branch-bound), continuous optimisation techniques, IBM's CPLEX Optimizer</li>
+      <li>Others: SQL, Bash</li>
     </ul>
   </div>
 </div>
