--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <div>
   <img src="https://via.placeholder.com/150" />
   <h1>Welcome! My name is Tianchi Ma(马天驰).</h1>
-  <h3>I'm a currently master student at School of Computer Science, McGill University.</h3>
+  
   <div>
+  	<h3>About</h3>
+  	<p>I'm a currently master student at School of Computer Science, McGill University.</p>
     <p>Some of my skills include:</p>
     <ul>
       <li>Languages: Chinese(native), English(advanced), French(intermediate)</li>
