--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </li>
 
     <li>
-      <a href="tianchi.ma@foxmail.com">Email</a>
+      <a href="mailto:tianchi.ma@foxmail.com?subject=Questions">Email</a>
     </li>
   </ul>
   </div>
