--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
  <meta charset="utf-8" />
  <title>My Portfolio</title>
+ <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 <div>
   <img src="https://via.placeholder.com/150" />
-  <h1>Welcome! My name is Tianchi Ma(马天驰).</h1>
+  <h1 class="cool-class">Welcome! My name is Tianchi Ma(马天驰).</h1>
   
   <div>
   	<h3>About</h3>
