--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<div>
+<div class="intro">
   <img src="https://via.placeholder.com/150" />
   <h1 class="cool-class">Welcome! My name is Tianchi Ma(马天驰).</h1>
   
