--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<div class="intro">
+<div class="container">
+  <div class="intro">
   <img src="https://via.placeholder.com/150" />
   <h1 class="cool-class">Welcome! My name is Tianchi Ma(马天驰).</h1>
-  
+  </div>
   <div>
   	<h3>About</h3>
   	<p>I'm a currently master student at School of Computer Science, McGill University.</p>
