--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       <li>Optimisation: discrete optimisation techniques(simplex, duality, branch-bound), continuous optimisation techniques, IBM's CPLEX Optimizer</li>
       <li>Others: SQL, Bash</li>
     </ul>
+    <p>Some of my coding projects:</p>
+    <ul>
+      <li>Languages: Chinese(native), English(advanced), French(intermediate)</li>
+    </ul>
   </div>
   <div>
   <h3>Contact</h3>
