--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
  <meta charset="utf-8" />
  <title>My Portfolio</title>
  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 <div class="container">
   <div class="intro">
-  <img src="https://via.placeholder.com/150" />
+  <img src="images/images.jpeg" />
   <h1 class="cool-class">Welcome! My name is Tianchi Ma(马天驰).</h1>
   </div>
   <div>
