--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <div class="intro">
-  <img src="images/images.jpeg" />
+  <img class="im" src="images/images.jpeg" />
   <h1 class="cool-class">Welcome! My name is Tianchi Ma(马天驰).</h1>
   </div>
   <div>
