--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
     </ul>
     <p>Some of my coding projects:</p>
     <ul>
-      <li></li>
+      <li>Resolution restoration for astronomic images
+      	<ul>
+      		<li>Apply Super Resolution Convolutional Neural Network (SRCNN) on astronomic image resolution restoration tasks</li>
+      	</ul>
+      </li>
     </ul>
   </div>
   <div>
