--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
       	<ul>
       		<li>Apply Super Resolution Convolutional Neural Network (SRCNN) on astronomic image resolution restoration tasks</li>
       		<li>
-      			<a href="https://devpost.com/software/resolution-restoration-for-astronomic-images">Python Code/a>
+      			<a href="https://devpost.com/software/resolution-restoration-for-astronomic-images">Python Code </a>
+      		</li>
+      	</ul>
+      </li>
+      <li>Create a panorama with successive horizontal images
+      	<ul>
+      		<li>Apply RANSAC algorithm on initial matched SIFT features to stitch two successive images</li>
+      		<li>
+      			<a href="https://github.com/TianchiZERO/COMP558-Funds-of-Computer-Vision/tree/master/Assignment3">MATLAB Code </a>
       		</li>
       	</ul>
       </li>
