--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
       		</li>
       	</ul>
       </li>
+      <li>Classification of textual data
+      	<ul>
+      		<li>Apply classic models (Logistic Regression, SVM, Decision Tree) and their ensembles (AdaBoost, Random Forest, Baggins) and fine-tune hyper-parameters with RandomizedSearchCV</li>
+      		<li>Datasets: <a href="https://scikit-learn.org/stable/modules/generated/sklearn.datasets.fetch_20newsgroups.html">20 newsgroups </a> and <a href="http://ai.stanford.edu/~amaas/data/sentiment/">IMDB reviews </a> </li>
+      		<li>
+      			<a href="https://github.com/TianchiZERO/Predateur-Proie">Python Code </a>
+      		</li>
+      	</ul>
+      </li>
     </ul>
   </div>
   <div>
