--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       </li>
       <li>Classification of textual data
       	<ul>
-      		<li>Apply classic models (Logistic Regression, SVM, Decision Tree) and their ensembles (AdaBoost, Random Forest, Baggins) and fine-tune hyper-parameters with RandomizedSearchCV</li>
-      		<li>Datasets: <a href="https://scikit-learn.org/stable/modules/generated/sklearn.datasets.fetch_20newsgroups.html">20 newsgroups </a> and <a href="http://ai.stanford.edu/~amaas/data/sentiment/">IMDB reviews </a> </li>
+      		<li>Apply classic models (Logistic Regression, SVM, Decision Tree) and their ensembles (AdaBoost, Random Forest, Bagginh) and fine-tune hyper-parameters with RandomizedSearchCV</li>
+      		<li>Datasets: <a href="https://scikit-learn.org/stable/modules/generated/sklearn.datasets.fetch_20newsgroups.html">20 newsgroups</a> and <a href="http://ai.stanford.edu/~amaas/data/sentiment/">IMDB reviews</a> </li>
       		<li>
       			<a href="https://github.com/TianchiZERO/Predateur-Proie">Python Code </a>
       		</li>
