--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
       		</li>
       	</ul>
       </li>
+        <li>Implement Multilayer Perceptron from stratch
+      	<ul>
+      		<li>
+      			<a href="https://github.com/TianchiZERO/COMP551_Applied_Machine_Learning/">Python Code </a>
+      		</li>
+      	</ul>
+      </li>
     </ul>
   </div>
   <div>
