--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
       		<li>Apply RANSAC algorithm on initial matched SIFT features to stitch two successive images</li>
       		<li>
       			<a href="https://github.com/TianchiZERO/COMP558-Funds-of-Computer-Vision/tree/master/Assignment3">MATLAB Code </a>
+                and
+      			<a href="https://github.com/TianchiZERO/COMP558-Funds-of-Computer-Vision/blob/master/Assignment3/Example%20illustration.pdf">Examples</a>
       		</li>
       	</ul>
       </li>
