--- a/index.html
+++ b/index.html
@@ -67,6 +67,21 @@
       		</li>
       	</ul>
       </li>
+      <li>
+      Alternating direction method of multipliers (ADMM) algorithm for underdetermined integer least squares problems
+      </li>
+      <li>
+      Compare different models on sentence classification tasks
+      <ul>
+			<li>
+      			Models: classic(SVM, LR, NB), ensemble(bagging, Adaboost), deep learning(BERT)
+      		</li>
+      		<li>
+      			Datasets: Yelp, Reddit, Sentiment
+      		</li>
+      		
+      	</ul>
+      </li>
     </ul>
   </div>
   <div>
