--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       Compare different models on sentence classification tasks
       <ul>
 			<li>
-      			Models: classic(SVM, LR, NB), ensemble(bagging, Adaboost), deep learning(BERT)
+      			Models: classic(SVM, Logistic Regression, Naive Bayes), ensemble(Bagging, AdaBoost), deep learning(BERT)
       		</li>
       		<li>
       			Datasets: Yelp, Reddit, Sentiment
