--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="container">
   <div class="intro">
   <img src="images/images.jpeg" />
-  <h1 class="cool-class">Welcome! My name is Tianchi Ma(马天驰).</h1>
+  <h1 class="cool-class">Welcome! My name is Tianchi Ma(马天驰)</h1>
   </div>
   <div>
   	<h3>About</h3>
