--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   	<p>I'm a currently master student at School of Computer Science, McGill University.</p>
     <p>Some of my skills include:</p>
     <ul>
-      <li>Languages: Chinese(native), English(advanced), French(intermediate)</li>
-      <li>Programming: Python, Java, MATLAB</li>
-      <li>Computer fundamentals: data structures and algorithms, OOP</li>
-      <li>Machine Learning: classic models, deep learning models(MLP, CNN), Python libraries(Scikit-Learn, Numpy, PyTorch)</li>
-      <li>Optimisation: discrete optimisation techniques(simplex, duality, branch-bound), continuous optimisation techniques, IBM's CPLEX Optimizer</li>
-      <li>Others: SQL, Bash</li>
+      <li class = "ulli">Languages: Chinese(native), English(advanced), French(intermediate)</li>
+      <li class = "ulli">Programming: Python, Java, MATLAB</li>
+      <li class = "ulli">Computer fundamentals: data structures and algorithms, OOP</li>
+      <li class = "ulli">Machine Learning: classic models, deep learning models(MLP, CNN), Python libraries(Scikit-Learn, Numpy, PyTorch)</li>
+      <li class = "ulli">Optimisation: discrete optimisation techniques(simplex, duality, branch-bound), continuous optimisation techniques, IBM's CPLEX Optimizer</li>
+      <li class = "ulli">Others: SQL, Bash</li>
     </ul>
     <p>Some of my coding projects:</p>
     <ul>
