--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
   <h3>Contact</h3>
   <p>My Links:</p>
   <ul>
-    <li>
+    <li class = "ulli">
       <a href="https://github.com/TianchiZERO">GitHub</a>
     </li>
 
-    <li>
+    <li class = "ulli">
       <a href="mailto:tianchi.ma@foxmail.com?subject=Questions">Email</a>
     </li>
   </ul>
