--- a/index.html
+++ b/index.html
@@ -26,57 +26,57 @@
     </ul>
     <p>Some of my coding projects:</p>
     <ul>
-      <li>Resolution restoration for astronomic images
+      <li class = "ulli">Resolution restoration for astronomic images
       	<ul>
-      		<li>Apply Super Resolution Convolutional Neural Network (SRCNN) on astronomic image resolution restoration tasks</li>
-      		<li>
+      		<li class = "ulli">Apply Super Resolution Convolutional Neural Network (SRCNN) on astronomic image resolution restoration tasks</li>
+      		<li class = "ulli">
       			<a href="https://devpost.com/software/resolution-restoration-for-astronomic-images">Python Code </a>
       		</li>
       	</ul>
       </li>
-      <li>Create a panorama with successive horizontal images
+      <li class = "ulli">Create a panorama with successive horizontal images
       	<ul>
-      		<li>Apply RANSAC algorithm on initial matched SIFT features to stitch two successive images</li>
-      		<li>
+      		<li class = "ulli">Apply RANSAC algorithm on initial matched SIFT features to stitch two successive images</li>
+      		<li class = "ulli">
       			<a href="https://github.com/TianchiZERO/COMP558-Funds-of-Computer-Vision/tree/master/Assignment3">MATLAB Code </a>
                 and
       			<a href="https://github.com/TianchiZERO/COMP558-Funds-of-Computer-Vision/blob/master/Assignment3/Example%20illustration.pdf">Examples</a>
       		</li>
       	</ul>
       </li>
-       <li>Broad game predateur-proie
+       <li class = "ulli">Broad game predateur-proie
       	<ul>
-      		<li>
+      		<li class = "ulli">
       			<a href="https://github.com/TianchiZERO/Predateur-Proie">Java Code </a>
       		</li>
       	</ul>
       </li>
-      <li>Classification of textual data
+      <li class = "ulli">Classification of textual data
       	<ul>
-      		<li>Apply classic models (Logistic Regression, SVM, Decision Tree) and their ensembles (AdaBoost, Random Forest, Bagging) and fine-tune hyper-parameters with RandomizedSearchCV</li>
-      		<li>Datasets: <a href="https://scikit-learn.org/stable/modules/generated/sklearn.datasets.fetch_20newsgroups.html">20 newsgroups</a> and <a href="http://ai.stanford.edu/~amaas/data/sentiment/">IMDB reviews</a> </li>
-      		<li>
+      		<li class = "ulli">Apply classic models (Logistic Regression, SVM, Decision Tree) and their ensembles (AdaBoost, Random Forest, Bagging) and fine-tune hyper-parameters with RandomizedSearchCV</li>
+      		<li class = "ulli">Datasets: <a href="https://scikit-learn.org/stable/modules/generated/sklearn.datasets.fetch_20newsgroups.html">20 newsgroups</a> and <a href="http://ai.stanford.edu/~amaas/data/sentiment/">IMDB reviews</a> </li>
+      		<li class = "ulli">
       			<a href="https://github.com/TianchiZERO/COMP551_Applied_Machine_Learning/tree/main/p2">Python Code </a>
       		</li>
       	</ul>
       </li>
-        <li>Implement Multilayer Perceptron from stratch
+        <li class = "ulli">Implement Multilayer Perceptron from stratch
       	<ul>
-      		<li>
+      		<li class = "ulli">
       			<a href="https://github.com/TianchiZERO/COMP551_Applied_Machine_Learning/tree/main/p3">Python Code </a>
       		</li>
       	</ul>
       </li>
-      <li>
+      <li class = "ulli">
       Alternating direction method of multipliers (ADMM) algorithm for underdetermined integer least squares problems
       </li>
-      <li>
+      <li class = "ulli">
       Compare different models on sentence classification tasks
       <ul>
-			<li>
+			<li class = "ulli">
       			Models: classic(SVM, Logistic Regression, Naive Bayes), ensemble(Bagging, AdaBoost), deep learning(BERT)
       		</li>
-      		<li>
+      		<li class = "ulli">
       			Datasets: Yelp, Reddit, Sentiment
       		</li>
       		
