--- a/index.html
+++ b/index.html
@@ -16,67 +16,67 @@
   	<h3>About</h3>
   	<p>I'm a currently master student at School of Computer Science, McGill University.</p>
     <p>Some of my skills include:</p>
-    <ul>
-      <li class = "ulli">Languages: Chinese(native), English(advanced), French(intermediate)</li>
-      <li class = "ulli">Programming: Python, Java, MATLAB</li>
-      <li class = "ulli">Computer fundamentals: data structures and algorithms, OOP</li>
-      <li class = "ulli">Machine Learning: classic models, deep learning models(MLP, CNN), Python libraries(Scikit-Learn, Numpy, PyTorch)</li>
-      <li class = "ulli">Optimisation: discrete optimisation techniques(simplex, duality, branch-bound), continuous optimisation techniques, IBM's CPLEX Optimizer</li>
-      <li class = "ulli">Others: SQL, Bash</li>
+    <ul class = "ulli">
+      <li>Languages: Chinese(native), English(advanced), French(intermediate)</li>
+      <li>Programming: Python, Java, MATLAB</li>
+      <li>Computer fundamentals: data structures and algorithms, OOP</li>
+      <li>Machine Learning: classic models, deep learning models(MLP, CNN), Python libraries(Scikit-Learn, Numpy, PyTorch)</li>
+      <li>Optimisation: discrete optimisation techniques(simplex, duality, branch-bound), continuous optimisation techniques, IBM's CPLEX Optimizer</li>
+      <li>Others: SQL, Bash</li>
     </ul>
     <p>Some of my coding projects:</p>
-    <ul>
-      <li class = "ulli">Resolution restoration for astronomic images
+    <ul class = "ulli">
+      <li>Resolution restoration for astronomic images
       	<ul>
-      		<li class = "ulli">Apply Super Resolution Convolutional Neural Network (SRCNN) on astronomic image resolution restoration tasks</li>
-      		<li class = "ulli">
+      		<li>Apply Super Resolution Convolutional Neural Network (SRCNN) on astronomic image resolution restoration tasks</li>
+      		<li>
       			<a href="https://devpost.com/software/resolution-restoration-for-astronomic-images">Python Code </a>
       		</li>
       	</ul>
       </li>
-      <li class = "ulli">Create a panorama with successive horizontal images
+      <li>Create a panorama with successive horizontal images
       	<ul>
-      		<li class = "ulli">Apply RANSAC algorithm on initial matched SIFT features to stitch two successive images</li>
-      		<li class = "ulli">
+      		<li>Apply RANSAC algorithm on initial matched SIFT features to stitch two successive images</li>
+      		<li>
       			<a href="https://github.com/TianchiZERO/COMP558-Funds-of-Computer-Vision/tree/master/Assignment3">MATLAB Code </a>
                 and
       			<a href="https://github.com/TianchiZERO/COMP558-Funds-of-Computer-Vision/blob/master/Assignment3/Example%20illustration.pdf">Examples</a>
       		</li>
       	</ul>
       </li>
-       <li class = "ulli">Broad game predateur-proie
+       <li>Broad game predateur-proie
       	<ul>
-      		<li class = "ulli">
+      		<li>
       			<a href="https://github.com/TianchiZERO/Predateur-Proie">Java Code </a>
       		</li>
       	</ul>
       </li>
-      <li class = "ulli">Classification of textual data
+      <li>Classification of textual data
       	<ul>
-      		<li class = "ulli">Apply classic models (Logistic Regression, SVM, Decision Tree) and their ensembles (AdaBoost, Random Forest, Bagging) and fine-tune hyper-parameters with RandomizedSearchCV</li>
-      		<li class = "ulli">Datasets: <a href="https://scikit-learn.org/stable/modules/generated/sklearn.datasets.fetch_20newsgroups.html">20 newsgroups</a> and <a href="http://ai.stanford.edu/~amaas/data/sentiment/">IMDB reviews</a> </li>
-      		<li class = "ulli">
+      		<li>Apply classic models (Logistic Regression, SVM, Decision Tree) and their ensembles (AdaBoost, Random Forest, Bagging) and fine-tune hyper-parameters with RandomizedSearchCV</li>
+      		<li>Datasets: <a href="https://scikit-learn.org/stable/modules/generated/sklearn.datasets.fetch_20newsgroups.html">20 newsgroups</a> and <a href="http://ai.stanford.edu/~amaas/data/sentiment/">IMDB reviews</a> </li>
+      		<li>
       			<a href="https://github.com/TianchiZERO/COMP551_Applied_Machine_Learning/tree/main/p2">Python Code </a>
       		</li>
       	</ul>
       </li>
-        <li class = "ulli">Implement Multilayer Perceptron from stratch
+        <li>Implement Multilayer Perceptron from stratch
       	<ul>
-      		<li class = "ulli">
+      		<li>
       			<a href="https://github.com/TianchiZERO/COMP551_Applied_Machine_Learning/tree/main/p3">Python Code </a>
       		</li>
       	</ul>
       </li>
-      <li class = "ulli">
+      <li>
       Alternating direction method of multipliers (ADMM) algorithm for underdetermined integer least squares problems
       </li>
-      <li class = "ulli">
+      <li>
       Compare different models on sentence classification tasks
       <ul>
-			<li class = "ulli">
+			<li>
       			Models: classic(SVM, Logistic Regression, Naive Bayes), ensemble(Bagging, AdaBoost), deep learning(BERT)
       		</li>
-      		<li class = "ulli">
+      		<li>
       			Datasets: Yelp, Reddit, Sentiment
       		</li>
       		
@@ -87,12 +87,12 @@
   <div>
   <h3>Contact</h3>
   <p>My Links:</p>
-  <ul>
-    <li class = "ulli">
+  <ul class = "ulli">
+    <li>
       <a href="https://github.com/TianchiZERO">GitHub</a>
     </li>
 
-    <li class = "ulli">
+    <li>
       <a href="mailto:tianchi.ma@foxmail.com?subject=Questions">Email</a>
     </li>
   </ul>
