--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li>Computer fundamentals: data structures and algorithms, OOP</li>
       <li>Machine Learning: classic models, deep learning models(MLP, CNN), Python libraries(Scikit-Learn, Numpy, PyTorch)</li>
       <li>Optimisation: discrete optimisation techniques(simplex, duality, branch-bound), continuous optimisation techniques, IBM's CPLEX Optimizer</li>
+      <li>Web: HTML(limited)</li>
       <li>Others: SQL, Bash, Git</li>
     </ul>
     <p>Some of my coding projects:</p>
