--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li>Programming: Python, Java, MATLAB</li>
       <li>Computer fundamentals: data structures and algorithms, OOP</li>
       <li>Machine Learning: classic models, deep learning models(MLP, CNN), Python libraries(Scikit-Learn, Numpy, PyTorch)</li>
-      <li>Optimisation: discrete optimisation techniques(simplex, duality, branch-bound), continuous optimisation techniques, IBM's CPLEX Optimizer</li>
+      <li>Optimisation: discrete\continuous optimisation techniques, commercial packages(Cplex, Gurobi, Mosek)</li>
       <li>Web: HTML(limited)</li>
       <li>Others: SQL, Bash, Git</li>
     </ul>
