--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
     </ul>
     <p>Some of my coding projects:</p>
     <ul class = "ulli">
+
+      <li>
+      Alternating direction method of multipliers (ADMM) algorithm for underdetermined integer least squares problems
+        <ul>
+          <li>Implement the algorithm in MATLAB, accelerate through parallel computing and generating C code, compare with commercial packages</li>
+
+        </ul>
+      </li>
       <li>Resolution restoration for astronomic images
       	<ul>
       		<li>Apply Super Resolution Convolutional Neural Network (SRCNN) on astronomic image resolution restoration tasks</li>
@@ -67,9 +75,7 @@
       		</li>
       	</ul>
       </li>
-      <li>
-      Alternating direction method of multipliers (ADMM) algorithm for underdetermined integer least squares problems
-      </li>
+      
       <li>
       Compare different models on sentence classification tasks
       <ul>
