--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       Alternating direction method of multipliers (ADMM) algorithm for underdetermined integer least squares problems
         <ul>
           <li>Implement the algorithm in MATLAB, accelerate through parallel computing and generating C code, compare with commercial packages</li>
-
+          <li>
+            <a href="https://github.com/TianchiZERO/TianchiZERO.github.io/blob/master/images/Thesis.pdf">Thesis </a>
+          </li>
         </ul>
       </li>
       <li>Resolution restoration for astronomic images
